--- a/configs/config.yml
+++ b/configs/config.yml
@@ -26,7 +26,9 @@ fit_config:
   consistency: true
   multimodal: true
   verbose: true
-  best_model_path: models/best_model.pth
+  text_tokenizer: tapas
+  text_encoder: tapas
+  best_model_path: models/test/best_model.pth
   lr_patience: 10
   alpha: 0.2
   early_stopping_patience: 15
