--- a/configs/config_mfeat_fourier.yml
+++ b/configs/config_mfeat_fourier.yml
@@ -26,6 +26,8 @@ fit_config:
   consistency: true
   multimodal: true
   verbose: true
+  text_tokenizer: tapas
+  text_encoder: tapas
   best_model_path: models/best_model.pth
   lr_patience: 10
   alpha: 0.2
