--- a/configs/config_ova_breast.yml
+++ b/configs/config_ova_breast.yml
@@ -21,11 +21,13 @@ fit_config:
     - 180
     - 234
     - 250
-  batch_size: 224
+  batch_size: 64
   batch_size_transform: 10000
   consistency: true
   multimodal: true
   verbose: true
+  text_tokenizer: tapas
+  text_encoder: tapas
   best_model_path: models/best_model.pth
   lr_patience: 10
   alpha: 0.2
