--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,6 +1,6 @@
 data_config:
-  dataset: 1050
-  target: c
+  dataset: bank
+  target: label
   random_states:
     - 15
     - 108
@@ -10,8 +10,8 @@ data_config:
   task_type: binary
   na_threshold: 0.15
 fit_config:
-  dataset: 1050
-  num_epochs: 400
+  dataset: bank
+  num_epochs: 240
   learning_rate: 1.0e-04
   task_type: binary
   project_name: tgrl_multi_modal
