--- a/configs/config_bank.yml
+++ b/configs/config_bank.yml
@@ -1,19 +1,19 @@
 data_config:
-  dataset: 40996
-  target: class
+  dataset: bank
+  target: label
   random_states:
     - 15
     - 108
     - 180
     - 234
     - 250
-  task_type: multi_class
+  task_type: binary
   na_threshold: 0.15
 fit_config:
-  dataset: 40996
-  num_epochs: 400
-  learning_rate: 1.0e-05
-  task_type: multi_class
+  dataset: bank
+  num_epochs: 240
+  learning_rate: 1.0e-04
+  task_type: binary
   project_name: tgrl_multi_modal
   random_state:
     - 15
@@ -21,14 +21,14 @@ fit_config:
     - 180
     - 234
     - 250
-  batch_size: 48
+  batch_size: 240
   batch_size_transform: 10000
   consistency: true
   multimodal: true
   verbose: true
   text_tokenizer: tapas
   text_encoder: tapas
-  best_model_path: models/best_model.pth
+  best_model_path: models/test/best_model.pth
   lr_patience: 10
   alpha: 0.2
   early_stopping_patience: 15
