--- a/configs/config_blood.yml
+++ b/configs/config_blood.yml
@@ -1,19 +1,19 @@
 data_config:
-  dataset: 1478
-  target: Class
+  dataset: blood
+  target: label
   random_states:
     - 15
     - 108
     - 180
     - 234
     - 250
-  task_type: multi_class
+  task_type: binary
   na_threshold: 0.15
 fit_config:
-  dataset: 1478
-  num_epochs: 512
-  learning_rate: 1.0e-05
-  task_type: multi_class
+  dataset: blood
+  num_epochs: 240
+  learning_rate: 1.0e-04
+  task_type: binary
   project_name: tgrl_multi_modal
   random_state:
     - 15
@@ -21,7 +21,7 @@ fit_config:
     - 180
     - 234
     - 250
-  batch_size: 64
+  batch_size: 240
   batch_size_transform: 10000
   consistency: true
   multimodal: true
