--- a/configs/config_income.yml
+++ b/configs/config_income.yml
@@ -1,19 +1,19 @@
 data_config:
-  dataset: texture
-  target: Class
+  dataset: income
+  target: label
   random_states:
     - 15
     - 108
     - 180
     - 234
     - 250
-  task_type: multi_class
+  task_type: binary
   na_threshold: 0.15
 fit_config:
-  dataset: texture
-  num_epochs: 512
+  dataset: income
+  num_epochs: 240
   learning_rate: 1.0e-04
-  task_type: multi_class
+  task_type: binary
   project_name: tgrl_multi_modal
   random_state:
     - 15
@@ -28,7 +28,7 @@ fit_config:
   verbose: true
   text_tokenizer: tapas
   text_encoder: tapas
-  best_model_path: models/best_model.pth
+  best_model_path: models/test/best_model.pth
   lr_patience: 10
   alpha: 0.2
   early_stopping_patience: 15
