--- a/configs/config_pc3.yml
+++ b/configs/config_pc3.yml
@@ -1,5 +1,5 @@
 data_config:
-  dataset: 1050
+  dataset: pc3
   target: c
   random_states:
     - 15
@@ -10,9 +10,9 @@ data_config:
   task_type: binary
   na_threshold: 0.15
 fit_config:
-  dataset: 1050
+  dataset: pc3
   num_epochs: 512
-  learning_rate: 1.0e-05
+  learning_rate: 1e-4
   task_type: binary
   project_name: tgrl_multi_modal
   random_state:
@@ -21,7 +21,7 @@ fit_config:
     - 180
     - 234
     - 250
-  batch_size: 64
+  batch_size: 240
   batch_size_transform: 10000
   consistency: true
   multimodal: true
