--- a/configs/config_coil2000.yml
+++ b/configs/config_coil2000.yml
@@ -11,8 +11,8 @@ data_config:
   na_threshold: 0.15
 fit_config:
   dataset: coil2000
-  num_epochs: 400
-  learning_rate: 0.0001
+  num_epochs: 500
+  learning_rate: 1.0e-04
   task_type: binary
   project_name: tgrl_multi_modal
   random_state:
